objects/Journey_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact other than Primary Contact which will be member of the Journey.</description>
        <inlineHelpText>Contact other than Primary Contact which will be member of the Journey.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journey Contacts</relationshipLabel>
        <relationshipName>Journey_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <description>Journey for which Member is being defined</description>
        <inlineHelpText>Journey for which Member is being defined</inlineHelpText>
        <label>Journey</label>
        <referenceTo>Journey__c</referenceTo>
        <relationshipLabel>Journey Contacts</relationshipLabel>
        <relationshipName>Journey_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>This will enforce uniqueness of the Journey Contact by journey id and contact id, so same contact can not be added to the same journey again. 
format for unique key is JourneyId-ContactId</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Other members which may be involved in the Journey.</description>
    <label>Journey Contact</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>